2009-02-11  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* Makefile.am:
	Include the rules to build rpm packages.
	* flumotion-flash.spec.in:
	Added a dependency to gstreamer-fluendo-mcaacenc
	* flumotion/component/encoders/aac/aac.py:
	* flumotion/component/encoders/aac/wizard_gtk.py:
	* flumotion/component/encoders/flv/admin_gtk.py:
	* flumotion/component/encoders/flv/flv.py:
	* flumotion/component/encoders/mp3/mp3.py:
	* flumotion/component/encoders/mp3/wizard_gtk.py:
	* flumotion/component/encoders/vp6/vp6.py:
	* flumotion/component/encoders/vp6/wizard_gtk.py:
	* flumotion/component/muxers/flv/flv.py:
	* flumotion/component/plugs/flashhttp/flashhttp.py:
	* flumotion/component/plugs/flashhttp/flashhttp_wizard.py:
	* flumotion/component/plugs/flashhttp/flashplayer_location.py.in:
	* flumotion/component/plugs/flashhttp/workercheck.py:
	Make flumotion-flash pep8 clean

2009-02-03  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/encoders/vp6/wizard_gtk.py:
	Convert the bitrate property of vp6 to bps according the error
	explained on the previous change.

2009-02-03  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/encoders/vp6/vp6.py:
	Fixed a bitrate unit. It was supposed to be in bps
	but really was kbps due to a change in the underlying
	gstreamer encoder (were using pitfdll and now fluvp6enc).

2009-01-29  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/plugs/flashhttp/flashhttp.xml:
	* flumotion/component/plugs/flashhttp/flashhttp_wizard.py:
	Updated some imports to agree with the real modules under admin.

2008-09-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/vp6/vp6.py:
	  Set properties based on Julien's recommendations.  See #2133.

2008-08-26  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/plugs/flashhttp/flashhttp_wizard.py
	(FlashHTTPServer.getProperties): If the streamer has a hostname
	set, reuse that in the server.
